src/objects/ErrorLog__c.object
<CustomObject>
    <fields>
        <fullName>IsSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSuccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ErrorLog</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ErrorLog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>